// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HumidityContainer component tests snapshot with a spinner 1`] = `
<div
  class="humidity__section humidity-section test-class"
  data-testid="humidity"
>
  <div
    aria-label="loading spinner"
    class="spinner "
    style="--size: 257px;"
    title="loading spinner"
  >
    <div
      class="spinner__ring"
      style="--ring-size: 205.60000000000002px;"
    />
    <div
      class="spinner__ring"
      style="--ring-size: 205.60000000000002px;"
    />
    <div
      class="spinner__ring"
      style="--ring-size: 205.60000000000002px;"
    />
    <div
      class="spinner__ring"
      style="--ring-size: 205.60000000000002px;"
    />
  </div>
</div>
`;

exports[`HumidityContainer component tests snapshot with mock data 1`] = `
<div
  class="humidity__section humidity-section test-class"
  data-testid="humidity"
>
  <div
    class="humidity "
    data-testid=""
  >
    <h3
      class="humidity__title"
    >
      Относительная влажность
    </h3>
    <div
      class="humidity__content"
    >
      <div
        class="pie-chart humidity__pie-chart"
        data-testid=""
      >
        <svg
          class="pie-chart__icon"
          fill="none"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            class="pie-chart__circle"
            cx="255"
            cy="255"
            r="245.25"
          />
          <circle
            class="pie-chart__circle"
            cx="255"
            cy="255"
            r="245.25"
            style="--value: 84;"
          />
        </svg>
        <p
          class="pie-chart__text"
        >
          84
          %
        </p>
      </div>
      <p
        class="humidity__apparent-temperature"
      >
        Ощущаемая температура:
         
        -19.1°
      </p>
    </div>
  </div>
</div>
`;

exports[`HumidityContainer component tests snapshot with mock error 1`] = `
<div
  class="humidity__section humidity-section test-class"
  data-testid="humidity"
>
  <div
    class="error-info  "
    data-testid=""
    role="alert"
  >
    <h3
      class="error-info__description"
    >
      Не удалось загрузить данные об относительной влажности
    </h3>
  </div>
</div>
`;

exports[`HumidityContainer component tests snapshot without anything 1`] = `
<div
  class="humidity__section humidity-section test-class"
  data-testid="humidity"
/>
`;
